--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-cookie": "^6.1.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-fast-marquee": "^1.6.2",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
+    "react-table": "^7.8.0",
+    "react-table-pagination": "^2.2.0",
     "sass": "^1.69.5",
-    "swiper": "^8.0.0"
+    "swiper": "^8.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8",
