--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.3",
     "classnames": "^2.3.3",
     "dotenv": "^16.3.1",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-i18next": "^15.1.1",
@@ -19,6 +20,7 @@
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-cookie": "^6.1.1",
+    "react-datepicker": "^4.25.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
