--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.3",
+    "date-fns": "^3.3.0",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
