--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^3.3.0",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-i18next": "^15.1.1",
@@ -29,9 +30,11 @@
     "react-responsive": "^9.0.2",
     "react-table": "^7.8.0",
     "react-table-pagination": "^2.2.0",
+    "recharts": "^2.10.4",
     "sass": "^1.69.5",
     "swiper": "^8.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "eslint": "^8",
