--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "classnames": "^2.3.3",
     "date-fns": "^3.3.0",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.4",
     "next": "14.0.4",
     "next-i18next": "^15.1.1",
     "next-seo": "^6.4.0",
