--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
+    "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "react-table-pagination": "^2.2.0",
     "recharts": "^2.10.4",
